NetBSD Problem Report #51685

From www@NetBSD.org  Sat Dec  3 07:09:24 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 213287A27F
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  3 Dec 2016 07:09:24 +0000 (UTC)
Message-Id: <20161203070915.26A087A325@mollari.NetBSD.org>
Date: Sat,  3 Dec 2016 07:09:15 +0000 (UTC)
From: n54@gmx.com
Reply-To: n54@gmx.com
To: gnats-bugs@NetBSD.org
Subject: ptrace(2): Signal does not set PL_EVENT_SIGNAL in (struct ptrace_lwpinfo.)pl_event
X-Send-Pr-Version: www-1.0

>Number:         51685
>Category:       kern
>Synopsis:       ptrace(2): Signal does not set PL_EVENT_SIGNAL in (struct ptrace_lwpinfo.)pl_event
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Dec 03 07:10:00 +0000 2016
>Closed-Date:    Tue Dec 06 07:59:15 +0000 2016
>Last-Modified:  Tue Dec 06 07:59:15 +0000 2016
>Originator:     Kamil Rytarowski
>Release:        NetBSD 7.99.42 amd64
>Organization:
TNF
>Environment:
NetBSD chieftec 7.99.42 NetBSD 7.99.42 (GENERIC) #6: Thu Dec  1 21:50:15 CET 2016  root@chieftec:/public/netbsd-tmp-root/sys/arch/amd64/compile/GENERIC amd64

>Description:
Tracee once stopped with a signal - does not set (struct ptrace_lwpinfo.)pl_event to PL_EVENT_SIGNAL.
>How-To-Repeat:
Test-file: tests/kernel/t_ptrace_wait

Tests:
 - lwpinfo1
 - lwpinfo2
 - ...
>Fix:
N/A

>Release-Note:

>Audit-Trail:
From: "Kamil Rytarowski" <kamil@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51685 CVS commit: src/tests/kernel
Date: Sat, 3 Dec 2016 07:23:08 +0000

 Module Name:	src
 Committed By:	kamil
 Date:		Sat Dec  3 07:23:08 UTC 2016

 Modified Files:
 	src/tests/kernel: t_ptrace_wait.c

 Log Message:
 Add new tests lwpinfo1 in t_ptrace_wait* and lwpinfo2 under HAVE_PID guard

 lwpinfo1:
     Verify baic LWPINFO call for single thread (PT_TRACE_ME)

 lwpinfo2:
     Verify baic LWPINFO call for single thread (PT_ATTACH from tracer)

 Both tests are marked as expected failure PR kern/51685:
     ptrace(2): Signal does not set PL_EVENT_SIGNAL in
     (struct ptrace_lwpinfo.)pl_event

 Sponsored by <The NetBSD Foundation>


 To generate a diff of this commit:
 cvs rdiff -u -r1.37 -r1.38 src/tests/kernel/t_ptrace_wait.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51685 CVS commit: src/sys/kern
Date: Sun, 4 Dec 2016 11:40:44 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Dec  4 16:40:44 UTC 2016

 Modified Files:
 	src/sys/kern: kern_sig.c

 Log Message:
 PR/51685: Kamil Rytarowski: Fill sigcontext info in kpsignal2 so that the
 debugger/core-dump signal info gets filled in in all code paths (including
 the lwp_kill one).


 To generate a diff of this commit:
 cvs rdiff -u -r1.330 -r1.331 src/sys/kern/kern_sig.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Kamil Rytarowski" <kamil@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51685 CVS commit: src/tests/kernel
Date: Sun, 4 Dec 2016 23:48:02 +0000

 Module Name:	src
 Committed By:	kamil
 Date:		Sun Dec  4 23:48:02 UTC 2016

 Modified Files:
 	src/tests/kernel: t_ptrace_wait.c

 Log Message:
 lwpinfo1 and lwpinfo2 in t_ptrace_wait{,3,4,6,id,pid} no longer fails

 Remove atf_tc_expect_fail() linked with PR kern/51685.

 Issue fixed by Christsos Zoulas in src/sys/kern/kern_sig.c r. 1.331

 Sponsored by <The NetBSD Foundation>


 To generate a diff of this commit:
 cvs rdiff -u -r1.38 -r1.39 src/tests/kernel/t_ptrace_wait.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Kamil Rytarowski" <kamil@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51685 CVS commit: src/tests/kernel
Date: Mon, 5 Dec 2016 07:18:10 +0000

 Module Name:	src
 Committed By:	kamil
 Date:		Mon Dec  5 07:18:10 UTC 2016

 Modified Files:
 	src/tests/kernel: t_ptrace_wait.c

 Log Message:
 Mark again lwpinfo2 with expected failure in t_ptrace_wait{,3,4,6,id,pid}

 Only failure lwpinfo1 was addressed, not lwpinfo2.

 PR kern/51685

 Sponsored by <The NetBSD Foundation>


 To generate a diff of this commit:
 cvs rdiff -u -r1.39 -r1.40 src/tests/kernel/t_ptrace_wait.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: kamil@NetBSD.org
State-Changed-When: Tue, 06 Dec 2016 08:59:15 +0100
State-Changed-Why:
Fixed by Christos Zoulas
src/sys/kern/sys_ptrace_common.c r1.6
src/sys/kern/kern_sig.c r1.331


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.