PR/51685: Kamil Rytarowski: Fill sigcontext info in kpsignal2 so that the debugger/core-dump signal info gets filled in in all code paths (including the lwp_kill one).